--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -20,7 +20,6 @@
 #header >#nav> li{
     display: inline-block;
    position: relative;
-    
 }
 
 #header>#nav>li:hover > a{
@@ -49,7 +48,14 @@
     
 }
 
-
+@keyframes subnav-down {
+    0%{
+        height: 0px;
+    }
+    100%{
+        height: 120px;
+    }
+}
 
 #header .subnav{
     position: absolute;
@@ -58,10 +64,12 @@
     width: 180px;
     box-shadow: 0 0 10px;
     display: none;
+    overflow: hidden;
 }
 
 #header #nav li:hover .subnav {
     display: block;
+    animation: subnav-down 2s;
 }
 
 #header .subnav li:hover a{
