--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ html {
 .content{background-color: #f2f3f5;
     padding: 40px 65px;
     margin-top: 45px;
-    height: 700px;
+    height: 100%;
 }
 
 .content__container{
@@ -191,6 +191,7 @@ html {
 
 
 .container__list-main-item {
+    list-style: none;
     margin: 0 15px;
     padding: 6px;
     border-radius: 4px;
@@ -220,4 +221,29 @@ html {
     line-height: 22px;
     color: var(--main3-color);
 
+}
+
+@media (max-width: 740px) {
+    .container__list-main {
+        flex-direction: column;
+    }
+    .content {
+        padding: 2px;
+    }
+    .container__list-main {
+        padding: 0;
+    }
+}
+
+/* Footer */
+#footer {
+    display: flex;
+    justify-content: flex-end;
+    padding: 2px 10px ;
+    margin-right: 15px;
+}
+
+#footer h3 {
+    font-size: 2rem;
+    font-weight: 300;
 }
