--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,7 @@
 
 #main {
     height: 100%;
+    overflow: hidden;
 }
 
 html {
@@ -152,7 +153,6 @@ html {
 
 .content{background-color: #f2f3f5;
     padding: 40px 65px;
-    margin-top: 45px;
     height: 100%;
 }
 
@@ -223,6 +223,11 @@ html {
 
 }
 
+.form__send-button:hover {
+    background-color: var(--heading-color);
+    cursor: pointer;
+}
+
 @media (max-width: 740px) {
     .container__list-main {
         flex-direction: column;
@@ -233,6 +238,208 @@ html {
     .container__list-main {
         padding: 0;
     }
+    .form__name{
+        display: flex;
+        flex-direction: column;
+    }
+    .form__name-full-name {
+        width: 100%;
+    }
+    .form input{
+    }
+    .form__send {
+        flex-direction: column;
+    }
+    .form {
+        margin: 0 8px;
+    }
+
+    .form__name-main {
+        object-fit: contain;
+    }
+    .form__send-button {
+        cursor: pointer;
+    width: 100%;
+    }
+
+    .form__send-note {
+        1.8
+    }
+    .test6__container {
+        flex-direction: column;
+    }
+    .test6__container-img img {
+        width: 100%;
+    }
+    .test6 {
+        padding: 0 !important;
+        margin: 0 8px;
+    }
+    .test6__container-content {
+        padding: 0 !important;
+        margin: 0 8px;
+    }
+    .container-content__sub-text {
+        font-size: 2rem;
+    }
+    .content__main-list-item {
+        font-size: 2rem;
+    }
+}
+/* Test5 */
+    
+#test5 {
+    display: flex;
+    justify-content: center;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 30px;
+    width: 770px;
+    
+}
+
+.form input {
+    min-height: 40px;
+    font-size: 1.4rem;
+    border: 1px solid #333;
+    padding: 0 10px;
+    outline: none;
+    border-radius: 3px;
+
+}
+
+.form__header{
+    font-size: 2rem;
+    color: #333;
+}
+.form__name{
+    display: flex;
+    width: 100%;
+
+
+
+}
+.form__name-full-name{
+    margin-right: 24px;
+    width: 50%;
+}
+.form__name-email{
+    width: 50%;
+}
+.form__subject{
+    margin: 10px 0;
+}
+.form__message{
+    height: 100px;
+}
+.form__send{
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.form__send-button{
+    text-align: center;
+    height: 40px;
+    min-width: 126px;
+    border-radius: 3px;
+    border: none;
+    font-size: 1.4rem;
+    color: #fff;
+    background-color: rgb(65, 206, 206);
+}
+.form__send-note{   
+    font-size: 1.6rem;
+    color: #333;
+}
+
+/* test 6 */
+
+.test6{
+    background-color: rgb(242, 243, 245);
+    padding: 40px 65px;
+    height: 100%;
+}
+
+.test6__container{
+    display: flex;
+    align-items: center;
+}
+
+.test6__container-img{
+    transition: all ease 1s;
+}
+
+.test6__container-img img{
+    border-radius: 10px;
+    
+}
+
+.test6__container-img:hover {
+    transform: scale(110%);
+}
+
+.test6__container-content{
+    padding-left: 60px;
+}
+
+.container-content__header{
+    font-size: 4rem;
+    position: relative;
+    display: inline-block;
+    margin: 0 0 24px 0;
+    color: #333333;
+}
+
+.container-content__header::after {
+    transition: all ease-in-out 0.5s;
+    position: absolute;
+    height: 4.5px;
+    width: 72px;
+    top: 48px;
+    left: 0;
+    content: "";
+    background-image: linear-gradient(to left, #6c7bff, #70b2fb);
+}
+
+.container-content__header:hover::after{
+    width: 100%;
+}
+
+
+.container-content__sub-text{
+    font-size: 1.6rem;
+    color: #a7a7a7;
+}
+
+.container-content__sub-header{
+    font-size: 2.8rem;
+    margin: 0;
+}
+
+.container-content__main{
+    display: flex;
+}
+
+.content__main-list{
+    list-style: none;
+}
+
+.content__main-list-item {
+    font-size: 1.6rem;
+    color: #a7a7a7;
+}
+
+.main-list-item__icon{
+    color: #75b6fb;
+}
+
+.container-content__sub-text, .content__main-list-item{
+    line-height: 26px;
 }
 
 /* Footer */
