--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -4,7 +4,8 @@
 }
 
 .content__about{
-    background-image: url(../img/about/aboutBackground.JPG);
+    background-image: url(../img/About/aboutBgr.JPG);
+    background-position: inherit;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
