--- a/assets/css/member.css
+++ b/assets/css/member.css
@@ -27,6 +27,7 @@
     padding: 0;
     display: flex;
     padding: 40px 0;
+    justify-content: center;
 }
 .content__member-member{
     margin: 0 25px;
