--- a/assets/html/assets/app.css
+++ b/assets/html/assets/app.css
@@ -124,7 +124,9 @@ a {
   flex-direction: column;
   height: 140px;
   background-color: #fff;
-  z-index: 2;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 .add--more {
   line-height: 60px;
