--- a/assets/html/assets/app.css
+++ b/assets/html/assets/app.css
@@ -1,196 +1,306 @@
+/* reset css */
 :root {
-}
-
-html {
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 20px;
+  --background-light-theme-color: #fff;
+  --background-dark-theme-color: #000;
+  --text-light-color: #2c3e50;
+  --text-dark-color: #ecf0f1;
+  --btn-background-color: #3498db;
+  --btn-text-color: #ecf0f1;
+  --box-shadow-light-color: rgba(0, 0, 0, 0.4);
 }
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-
-button {
-  outline: none;
-  border: none;
-  cursor: pointer;
-  min-height: 41px;
-  color: #fff;
-  background-color: green;
-  border-radius: 8px;
+html {
+  font-size: 62.5%;
+  font-family: "Roboto Condensed", sans-serif;
+  color: var(--text-light-color);
 }
-
+#main {
+  font-size: 1.8rem;
+  overflow: hidden;
+}
 img {
   max-width: 100%;
 }
 
-h1,
-h2 {
-  margin: 0;
-}
-
+ul,
 li {
-  list-style: none;
+  list-style-type: none;
 }
 
 a {
   text-decoration: none;
 }
 
-/* playlist */
-.play-control {
-  display: flex;
-  justify-content: center;
-  font-size: 28px;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 10px;
-  background-color: rgba(241, 179, 189, 0.877);
-  min-height: 100px;
-}
-.play-control-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 70%;
-  height: 100%;
-}
-.play--icon,
-.pause--icon {
-  color: palevioletred;
+button {
   cursor: pointer;
-  margin: 0 20px;
-  transition: 0.5s all;
-}
-.pause--icon {
-  display: none;
-}
-
-.play--icon:hover,
-.pause--icon:hover {
-  filter: contrast(3);
-}
-
-.control-img {
-  width: 30%;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  object-fit: cover;
-}
-
-.control-img > img {
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  object-fit: cover;
-}
-
-.control-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* playlist */
-
-.play-lists {
-  color: #fff;
-}
-.slider {
-  width: 100%;
-  margin-bottom: 10px;
-}
-input[type="range"]::-moz-range-progress {
-  background-color: rgba(175, 62, 81, 0.877);
-  color: rgba(175, 62, 81, 0.877);
-}
-
-.play-controls {
-  font-size: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: rgba(241, 179, 189, 0.877);
-  padding: 16px;
   border-radius: 8px;
+  border: none;
+  background-color: var(--btn-background-color);
 }
-.play-info {
-  font-weight: bold;
-  font-size: 28px;
-  margin: 20px 0;
+.hidden {
+  height: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  width: 0 !important;
+  overflow: hidden !important;
+}
+.active {
+  left: 0 !important;
+}
+
+/* -------- */
+/* header */
+.header {
+  background-color: var(--background-light-theme-color);
+  z-index: 99;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px 0;
+  box-shadow: 0px 0px 10px var(--box-shadow-light-color);
 }
-.play-img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background-image: url(./imgs/image.jpg);
-  background-size: cover;
-  object-fit: fill;
-}
-.play-controls-btn {
+.header-list-icon {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.play-controls-btn > * {
-  cursor: pointer;
+
+.header-icon {
+  color: var(--text-light-color);
   margin: 0 40px;
-  transition: 0.5s;
-  font-size: 40px;
-}
-.play-controls-btn > *:hover {
-  color: rgb(230, 119, 119);
-  transform: scale(120%);
-}
-.play-info > span {
-  text-transform: capitalize;
-}
-.play--pause {
-  display: none;
-}
-.play-list-song {
-  margin: 6px 0;
-  background-color: rgba(241, 179, 189, 0.877);
-  padding: 10px;
-  border-radius: 8px;
-}
-.song {
-  display: flex;
-  margin: 10px;
-  background-color: rgba(243, 139, 139, 0.507);
-  padding: 10px;
-  border-radius: 8px;
-  text-transform: capitalize;
-  transition: 0.5s;
-  cursor: pointer;
-}
-.song:hover {
-  background-color: rgba(71, 198, 240, 0.486);
-  transform: scale(98%);
+  transition: 0.7s all;
+  line-height: 60px;
+  transition: 0.7s all;
 }
 
-.active--song {
-  background-color: rgb(71, 197, 240);
-  transform: scale(105%);
+.header-icon:hover {
 }
-.song-avt {
-  width: 100px;
-  height: 100px;
+
+.icon--user,
+.icon--more {
+  font-size: 2.5rem;
+}
+.icon--user:hover,
+.icon--more:hover {
+  color: var(--btn-background-color);
+}
+.icon--home:hover {
+  color: var(--text-light-color);
+}
+.div--home {
+  position: relative;
+}
+.icon--home {
+  color: var(--btn-text-color);
+  font-size: 3.4rem;
+}
+.icon--home::after {
+  z-index: -1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  content: "";
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  background-size: cover;
-  object-fit: fill;
+  background-color: var(--btn-background-color);
 }
-.song-info {
-  padding-left: 20px;
-  width: 70%;
+.header-nav {
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--btn-background-color);
+  width: 0;
+  padding: 16px;
+  transition: 0.7s all;
+  overflow: hidden;
+  font-size: 2.5rem;
 }
-.song-info > h1 {
-  font-size: 24px;
+.header-nav > * {
+  transition: 0.7s all;
+}
+.header-nav > *:hover {
+  color: var(--btn-text-color);
+}
+.header-nav--active {
+  top: -70px;
+  width: initial;
+}
+.header-nav > * {
+  margin: 0 20px;
+}
+/* home */
+.home,.code {
+  position: relative;
+  left: 100%;
+  margin: 0 10px;
+  transition: 00.7s all;
+}
+.home-avt {
+  top: 40px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home-avt img {
+  width: 260px;
+  height: 260px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 0px 17px var(--box-shadow-light-color);
+}
+.home-info {
+  position: relative;
+  top: 60px;
+  text-align: justify;
+}
+.home-info h2 {
   text-align: center;
+  margin-bottom: 10px;
+  font-size: 3.4rem;
+  color: var(--btn-background-color);
+}
+
+/* css tag */
+
+.home-tag {
+  position: relative;
+  top: 65px;
+  color: var(--btn-text-color);
+  display: flex;
+  flex-wrap: wrap;
+}
+.home-tag span {
+  text-align: center;
+  margin: 6px 4px;
+  width: calc(100% / 3 - 14px);
+  display: block;
+  background-color: salmon;
+  padding: 8px;
+  border-radius: 6px;
+  box-shadow: 0px 1px 10px var(--box-shadow-light-color);
+}
+
+/* user */
+.user,.news {
+  position: relative;
+  left: 100%;
+  margin: 0 10px;
+  transition: all 0.7s;
+}
+.user-tag,.news-tag {
+  font-size: 2.6rem;
+  padding: 10px;
+  border-bottom: 1px dashed var(--box-shadow-light-color);
+  text-transform: capitalize;
+}
+.user-top {
+  margin: 10px 0;
+  display: flex;
+}
+.user-top img {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+.user-top-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
+  padding-left: 20px;
+}
+.user-top-info p:nth-child(1) {
+  text-transform: capitalize;
+  font-weight: bold;
+}
+.user-top-info p:nth-child(2) {
+  opacity: 0.8;
+}
+
+/* social */
+.user-social {
+  margin: 10px 0;
+}
+.user-header-tag {
+  font-size: 2.4rem;
+  display: flex;
+  padding: 10px;
+  border-left: 10px solid plum;
+  color: plum;
+  margin: 10px 0;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.user-header-tag p {
+  margin-left: 10px;
+}
+.social-name {
+  display: inline-flex;
+  font-size: 2rem;
+  background-color: #3498db;
+  padding: 10px;
+  border-radius: 8px;
+  margin: 6px;
+  width: calc(100% / 3 - 16px);
+  color: var(--background-light-theme-color);
+  text-transform: capitalize;
+}
+.social-name p {
+  padding: 0 8px;
+}
+
+.music {
+  height: clac(100% + 70px);
+
+  position: relative;
+  left: -100%;
+  transition: 0.7s all;
+}
+
+/* news */
+
+.news-content {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+}
+.new-info {
+  display: flex;
+  margin: 8px 0;
+  align-items: center;
+  background-color: rgba(49, 49, 49, 0.048);
+  padding: 8px;
+}
+.new-info img {
+  width: 130px;
+  height: 130px;
+  object-fit: cover;
+
+}
+.new-container {
+  padding-left: 10px;
+  width: 60%;
+}
+.new-container p {
+  opacity: 0.8;
+}
+.new-container h1 {
+  text-transform: capitalize;
 }
