--- a/assets/html/assets/app.css
+++ b/assets/html/assets/app.css
@@ -144,12 +144,19 @@ button {
 .header-nav > * {
   margin: 0 20px;
 }
+
+.home, .user, .music,.code,.news {
+  padding-bottom: 70px;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
+}
 /* home */
 .home,.code {
   position: relative;
   left: 100%;
   margin: 0 10px;
   transition: 00.7s all;
+  height: 100vh;
 }
 .home-avt {
   top: 40px;
@@ -175,6 +182,7 @@ button {
   margin-bottom: 10px;
   font-size: 3.4rem;
   color: var(--btn-background-color);
+  text-transform: capitalize;
 }
 
 /* css tag */
@@ -258,7 +266,7 @@ button {
   padding: 10px;
   border-radius: 8px;
   margin: 6px;
-  width: calc(100% / 3 - 16px);
+  width: calc(100% / 3 + 26px);
   color: var(--background-light-theme-color);
   text-transform: capitalize;
 }
@@ -303,4 +311,19 @@ button {
 }
 .new-container h1 {
   text-transform: capitalize;
+}
+
+/* code */
+
+.code-content {
+  font-size: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.code-content p {
+  opacity: 0.7;
+}
+.div {
+ 
 }
