--- a/assets/html/assets/app.css
+++ b/assets/html/assets/app.css
@@ -78,7 +78,105 @@ button {
   color: var(--text-dark-color);
   text-shadow: rgba(0, 0, 0, 0.6) 0px 0px 20px;
 }
+/* noti fixed*/
 
+.noti {
+position: fixed;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+background: #c9e6fa;
+z-index: 1;
+display: flex;
+justify-content: center;
+}
+.noti-container {
+  position: relative;
+  margin-top: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.noti-img {
+height: 200px;
+width: 200px;
+background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT10tH1tCvAwPPlWEGL_GJDxyjS41Us75fD4A&usqp=CAU);
+background-size: cover;
+border-radius: 50%;
+animation: spinner 3s ease-in-out;
+}
+.noti-text {
+  text-align: center;
+
+}
+.noti-text h2 {
+  margin-top: 20px;
+  text-transform: capitalize;
+font-size: 2.4rem;
+}
+.noti-text span {
+  font-size: 2rem;
+font-weight: bold;
+color: #696969;
+}
+.noti-btn {
+  margin-top: 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+ display: flex;
+ flex-direction: column;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 30%;
+
+}
+.noti-btn button {
+  font-weight: bold;
+  color: var(--text-dark-color);
+  font-size: 2.4rem;
+  padding: 10px;
+  width: 130px;
+  border-radius: 50px;
+  box-shadow: 0px 0px 20px var(--btn-background-color);
+  transition: 0.7s all;
+}
+.noti-btn button:hover, .noti-btn span:hover {
+filter: contrast(3);
+}
+.noti-btn span {
+  color: var(--btn-background-color);
+}
+
+/* music playing */
+
+.music-playing {
+  display: inline-flex;
+  height: 50px;
+  background-color: red;
+  min-width: 100px;
+  border-radius: 50px;
+  position: fixed;
+  overflow: hidden;
+  z-index: 2;
+  right: -23px;
+ transition: 2s all;
+}
+.music-playing-control {
+  position: absolute;
+  font-size: 3rem;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+
+@keyframes spinner {
+  100%{
+    transform: rotate(360deg);
+  }
+}
 /* header */
 .header {
   background-color: var(--background-light-theme-color);
@@ -207,6 +305,7 @@ button {
   position: relative;
   top: 60px;
   text-align: justify;
+  transition: 0.7s all;
 }
 .home-info h2 {
   text-align: center;
@@ -363,6 +462,7 @@ button {
   font-size: 2.4rem;
 }
 .project-in-code {
+  text-transform: capitalize;
 }
 .project-content {
   display: flex;
@@ -389,6 +489,10 @@ button {
   height: 0;
   overflow-y: scroll;
   overflow-x: hidden;
+}
+
+.project-sub h2 {
+  text-transform: capitalize;
 }
 
 .project--sub-full {
